--- a/src/App.css
+++ b/src/App.css
@@ -5,43 +5,48 @@
 4. Have layered images that make up the background layer, content layer, and text layers (2-3 layers)
 5. Pick a color theme
 6. Pick a font to use universally throughout app */
-.wrapper {
-  padding-top: 50px;
+html, body {
+  margin: 0;
+  padding: 0;
+}
+.container {
   background: #ECEFF1;
-  height: 100%;
+  width: 100%;
+  
+  /*background-size: auto;*/
+}
+.header {
+  background-color: red;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -150px !important;
+  /*max-height: fit-content;*/
+}
+.wrapper {
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/242759/cplogo.svg);
+  min-width: 0;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.content{
   display: flex;
   flex-flow: row wrap;
-  padding: 20px;
-  /* justify-content: space-around; */
   align-content: flex-start;
   overflow: auto;
-  min-width: 0;
-  padding: -5px;
+  margin-top: 150px;
 }
-.wrapper img {
-  flex: 1 1 15%;
+img {
+  flex: 1 1 20%;
   width: 250px;
   height: 250px;
   margin: 5px;
 }
 /* Code I want to add for background animated css */
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background: #191A1C;
-  width: 100%;
-  height: 100%;
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/242759/cplogo.svg);
-  background-size: 120px 60px;
-  background-position: round;
-  position: relative;
-}
 
-.header {
-  background: #ECEFF1;
-}
 
 /* body::before {
   display: block;
